--- a/workspace/Keypoint.tex
+++ b/workspace/Keypoint.tex
@@ -242,7 +242,7 @@ J_n(x) = \frac{1}{2 \pi} \int_{- \pi}^\pi e^{ix \sin \theta} \cdot e^{-in \theta
 
 
 
-\item\textbf{}
+\item\textbf{test}
 
 \end{enumerate}
 \end{document}
